Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h1 {
     margin-top: 2rem;
 }
 .solbutton {
-    background-color: #FF5733;; /* Neon pink */
+    background-color: #FF5733; /* Neon pink */
     color: #fff;
     border: none;
     padding: 2rem 4rem;
@@ -123,7 +123,7 @@ h1 {
 }
 .solbutton:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 10px #FF5733;;
+    box-shadow: 0 0 10px #FF5733;
 }
 .button-container .solbutton:active {
     transform: scale(0.95);
@@ -216,7 +216,7 @@ h1 {
     cursor: pointer;
     font-size: 1rem;
     font-family: 'megamax', sans-serif;
-    border: 0.1rem white;
+    border: 0.1rem solid white;
     border-radius: 4px;
     box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.5);
 }
@@ -340,18 +340,15 @@ footer {
         justify-content: center; /* no left/right for stacked layout */
     }
     .tokenomics {
-        width: 90%;
-        flex-direction: column; /* stack cards vertically */
-        align-items: center;
-        margin-left: 1.2rem;
-        gap: 1rem;
+        flex-direction: column ;
+        width: 75%;
+        margin-left: 3rem;
     }
     .tokenomics-spacer {
-        display: flex;
-        flex-direction: column;
-        align-items: left;
-        width: 95%;
-        margin-left: 0.5rem;
+        display: block;
+        align-items: center;
+        width: 90%;
+        margin-left: 1rem;
     }
     /* Tokenomics cards can go full width or 2-column on mobile */
     .card {
